--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,6 @@
 # set-option -sa terminal-overrides ",xterm*:Tc"
 # set -g default-terminal "xterm"
 
-# set-option -g status-style bg=default
 set -g mouse on
 
 set -g base-index 1
@@ -38,5 +37,6 @@ bind % split-window -h -c "#{pane_current_path}"
 set-option -g status-bg default
 set-option -g status-fg colour240
 
+set-option -g status-style bg=default
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
