--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,6 +18,8 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 bind -n M-H previous-window
 bind -n M-L next-window
 
+bind c new-window -c "#{pane_current_path}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
