new nvchad install ~ new general theme 🥵

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
-import:
-  - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
+# import:
+  # - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
 window:
   history: 10000
   # decorations: 'none'
